add 06-07 log, reverse log display order

--- a/learning-log/2025-06-04.md
+++ b/learning-log/2025-06-04.md
@@ -10,6 +10,7 @@ Read RTR4 chapter 5
 ### What I learned
 
 The reflective vector calculation.
+_TODO_:notes screenshot
 
 The shading calculation for Gooch model.
 
