Fix code block indentation

--- a/learning-log/2025-06-15.md
+++ b/learning-log/2025-06-15.md
@@ -102,7 +102,7 @@ This tells OpenGL: “draw triangle with v0-v1-v2, then v2-v3-v0”.
   ```
 
 
-## ✅ Bonus: Why use an EBO?
+## Why use an EBO?
 
 Instead of duplicating shared vertices, you can just reference them:
 
