--- a/learning-log/2025-06-20.md
+++ b/learning-log/2025-06-20.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title: "2025-06-19 initial check-in of"
-permalink: /learning-log/2025-06-19/
+title: "2025-06-20 initial check-in of asset loader/validator code"
+permalink: /learning-log/2025-06-20/
 math: true
 ---
 
