Update blog posts, navigation, theme, and OpenGL projects with various improvements and new content

--- a/learning-log/2025-06-25.md
+++ b/learning-log/2025-06-25.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "2025-06-25 investigate result and some thought
+title: "2025-06-25 investigate result and some thought"
 permalink: /learning-log/2025-06-25/
 math: true
 ---
